# worklog-cli

./: Cargo.toml  README.md  env.example  release.sh  requirements.txt  wl.py
.github/workflows/: release.yml
.zed/: debug.json
commands/: __init__.py  add_note.py  add_task.py  finish_ticket.py  last_note.py  open_note.py  start_ticket.py  tasks_list.py
core/: __init__.py  config.py  note_manager.py  parser.py  ticket_utils.py
src/: config.rs  lib.rs  main.rs  utils.rs
src/commands/: daily_note.rs  mod.rs  note.rs  task.rs
src/utils/: markdown.rs  mod.rs  time.rs
src/utils/markdown/: checklist.rs  heading.rs  mod.rs  ordered_list.rs  paragraph.rs  unordered_list.rs
templates/: daily.md
tests/: cli.rs  markdown.rs
utils/: __init__.py  date.py
