[package]
name = "worklog-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
