[package]
name = "worklog-cli"
version = "0.2.0"
edition = "2024"

[[bin]]
name = "wl"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"
